# terminal-image-preview

./: CMakeLists.txt  CMakePresets.json  README.md
ImagePreview/: CMakeLists.txt  Console.h  Image.h  ImagePreview.cpp  ImagePreview.h  xterm256.h
